--- a/src/components/sign/index.css
+++ b/src/components/sign/index.css
@@ -69,7 +69,7 @@
   color: var(--light-gray);
   font-weight: 600;
   font-size: 14px;
-  margin-bottom: 45px;
+  margin-bottom: 20px;
 }
 
 .form{
@@ -85,7 +85,7 @@
 }
 
 .form-input{
-  margin: 10px 0 30px 0;
+  margin: 10px 0 20px 0;
   height: 38px;
   padding: 0px 10px 2px 10px;
   font-size: 14px;
@@ -132,6 +132,15 @@
 }
 .left-context a:hover {
   color: var(--light-gray);
+} 
+
+.form-error{
+  color: var(--white);
+  padding: 20px 10px;
+  font-weight: 600;
+  border: 1px solid var(--light-gray);
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 .sign-right{
