--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 .App {
   background-color: rgb(36, 37, 38);
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   font-family: "Plus Jakarta Sans", sans-serif;
 }
 
@@ -17,3 +17,118 @@
 .home{
   background-color: rgb(27, 27, 27);
 }
+
+.library-page{
+  width: 80%;
+  min-height: 100vh;
+}
+.library-nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  background-color: rgb(48, 49, 49);
+  width: 100%;
+  height: 62px;
+  padding: 0 20px 0 20px;
+  right: 0;
+  border-bottom: 0.5px solid var(--red);
+  animation: navbar 2s infinite alternate-reverse ease-in-out;
+}
+
+
+
+.library-title{
+  padding-left: 40px;
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--white);
+}
+
+
+
+.library-search{
+  width: 50%;
+  height: 30px;
+  border-radius: 30px;
+  border: 1px solid var(--red);
+  background-color: rgb(31, 32, 32);
+  padding-left: 20px;
+  font-size: 16px;
+  color: var(--light-gray);
+}
+
+.library-addbook {
+  cursor: pointer;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-weight: 600;
+  color: rgb(41, 42, 43);
+  background-color: rgb(90, 145, 46);
+  padding: 5px 10px;
+  border: 1px solid rgb(44, 87, 10);
+  border-radius: 5px;
+  margin-right: 20px;
+  transition: 0.2s;
+}
+
+.library-addbook:hover {
+  background-color: rgb(44, 87, 10);
+  border-color: rgb(16, 31, 4);
+
+}
+
+.library-logout{
+  cursor: pointer;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    font-weight: 600;
+    color: var(--white);
+    background-color: var(--red);
+    border: 1px solid rgb(255, 107, 107);
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin-right: 20px;
+    transition: 0.2s;
+}
+
+.library-logout:hover{
+  border: 1px solid rgb(250, 151, 151);
+  background-color: rgb(189, 3, 3);
+  color: var(--light-gray);
+}
+
+.library-books{
+  margin-top: 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.book{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+}
+
+.book-title{
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--white);
+
+}
+
+.book-image{
+  width: 200px;
+  height: 280px;
+  border: 5px solid rgb(29, 29, 29);
+}
+
+
+
+
+
+
+
+
