--- a/src/components/createUpdate/index.css
+++ b/src/components/createUpdate/index.css
@@ -42,6 +42,12 @@
   padding: 5px 15px 6px 5px;
   margin: 40px;
   cursor: pointer;
+  transition: 0.2s;
+}
+
+.back-button:hover{
+  border: 1px solid rgb(250, 151, 151);
+  background-color: rgb(189, 3, 3)
 }
 
 .material-symbols-outlined {
